--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,115 +1,84 @@
-
-html,body {
-    background-color: black;
-    color: #00ff00;
-    font-family: monospace;
-    padding: 20px;
-    margin: 0;    
-    box-sizing: border-box;
-    scrollbar-color: #00ff00 black;
-}
-h1{font-size: 40px;}
-
-h2{font-size: 20px;}
-
-#about {
-  margin-top: 25px;  
-  margin-left: auto;
-  margin-right: auto;
-  width: 70%;
-  height: 500px;
-  max-width: 80vw;
-  overflow-y: auto;
-  border: 1px solid  #00ff00;
+html, body {
   background-color: black;
-  padding: 5px;
-  box-sizing: border-box; 
-  white-space: pre; 
-  word-wrap: break-word;
-  white-space: normal;
-  font-size: 15px; 
+  color: #00ff00;
+  font-family: monospace;
+  padding: 1rem;
+  margin: 0;
+  box-sizing: border-box;
   scrollbar-color: #00ff00 black;
 }
 
-#id-container{
-  margin-top: 10px;
+h1 {
+  font-size: 2.5rem; 
+  text-align: center;
 }
 
-button{
-  border: 1px solid  #00ff00;
-  background-color: black;
-  color: #00ff00;
-  font-size: 15px; 
-  font-family: monospace;
-  margin-top: 10px;
+h2 {
+  font-size: 1.25rem;
 }
-button:hover{
-  border: 1px solid  black;
-  background-color: #00ff00;
-  color: black;
-  font-size: 15px; 
-  font-family: monospace;
-  margin-top: 10px;  
-}
-
-#button-containter{
-    margin-top: 10px;
-}
-=======
-html,body {
-    background-color: black;
-    color: #00ff00;
-    font-family: monospace;
-    padding: 20px;
-    margin: 0;    
-    box-sizing: border-box;
-    scrollbar-color: #00ff00 black;
-}
-h1{font-size: 40px;}
-
-h2{font-size: 20px;}
 
 #about {
-  margin-top: 25px;  
-  margin-left: auto;
-  margin-right: auto;
-  width: 70%;
-  height: 500px;
-  max-width: 80vw;
+  margin: 1.5rem auto 0 auto;
+  width: 80%;
+  max-width: 800px;
+  max-height: 70vh;
   overflow-y: auto;
-  border: 1px solid  #00ff00;
+  border: 1px solid #00ff00;
   background-color: black;
-  padding: 5px;
-  box-sizing: border-box; 
-  white-space: pre; 
-  word-wrap: break-word;
+  padding: 1rem;
+  box-sizing: border-box;
+  font-size: 17px;
+  font-family: monospace;
+  line-height: 1.6;
   white-space: normal;
-  font-size: 15px; 
+  word-wrap: break-word;
   scrollbar-color: #00ff00 black;
 }
 
-#id-container{
-  margin-top: 10px;
+#id-container {
+  margin-top: 1rem;
 }
 
-button{
-  border: 1px solid  #00ff00;
+button {
+  border: 1px solid #00ff00;
   background-color: black;
   color: #00ff00;
-  font-size: 15px; 
+  font-size: 17px;
   font-family: monospace;
-  margin-top: 10px;
+  padding: 0.5rem 1rem;
+  margin-top: 1rem;
+  border-radius: 15px;
+  width: 12%;
+  max-width: 300px;
 }
-button:hover{
-  border: 1px solid  black;
+
+button:hover {
+  border: 1px solid black;
   background-color: #00ff00;
   color: black;
-  font-size: 15px; 
-  font-family: monospace;
-  margin-top: 10px;  
 }
 
-#button-containter{
-    margin-top: 10px;
+#button-containter {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
+@media (max-width: 600px) {
+  h1 {
+    font-size: 7vw;
+  }
+
+  #about {
+    width: 95%;
+    font-size: 1.3rem;
+    max-height: 60vh;
+    padding: 1rem;
+  }
+
+  button {
+    font-size: 1rem;
+    width: 30%;
+  }
+}
